--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"node": ">=12"
 	},
 	"dependencies": {
+		"lodash": "^4.17.15",
 		"multilingual-stemmer": "^1.0.2",
 		"slugg": "^1.2.1",
 		"vbb-find-stations": "^3.0.1",
